# Memori

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: memori-publish.yml
src/: allocator.rs  lib.rs  main.rs
src/bench/: mod.rs
src/bench/instant/: impls.rs  mod.rs
src/bench/scaling/: impls.rs  mod.rs
src/func/: mod.rs  output.rs
src/runner/: mod.rs
src/runner/measurement/: mod.rs
viewer/: README.md  biome.json  index.html  package.json  vite.config.ts
viewer/.husky/: pre-commit
viewer/src/: App.module.css  App.tsx  data.ts  main.tsx  types.ts
viewer/src/components/: ParameterDescription.module.css  ParameterDescription.tsx
viewer/src/components/BenchmarkChart/: BenchmarkChart.module.css  BenchmarkChart.tsx
viewer/src/components/Chart/: BenchmarkChart.module.css  BenchmarkChart.tsx  ChartCanvas.tsx  ChartControls.tsx  ChartExport.tsx  index.ts
viewer/src/components/Controls/: FilterHeader.tsx  index.ts
viewer/src/hooks/: index.ts  useChartData.ts  useChartFilters.ts
viewer/src/types/: benchmark.ts  index.ts  ui.ts
viewer/src/utils/: chartData.ts  dataLoader.ts  index.ts
